# IMAC-Lihowar

./: .gitattributes  .gitignore  CMakeLists.txt  DEV.md  LICENSE  LICENSE.stb  LICENSE.taocpp-json  README.md  turbo_schlag_clone_&_install.sh  turbo_schlag_install.sh
assets/meshes/: sphere.mtl
assets/models/: platonoid.mtl
cmake/: FindSDL2_mixer.cmake
config/: config.json  debug.json  debug_fullscreen.json  default.json  fullscreen.json  low.json
doc/html/: AssetManager_8hpp_source.html  Beacon_8hpp_source.html  ConfigSerializer_8hpp_source.html  DirLightProgram_8hpp_source.html  GameConfig_8hpp_source.html  GameController_8hpp_source.html  GameRenderer_8hpp_source.html  Game_8hpp_source.html  IObserver_8hpp_source.html  ISubject_8hpp_source.html  IslandProgram_8hpp_source.html  Island_8hpp_source.html  LightDirectional_8hpp_source.html  LightPoint_8hpp_source.html  Light_8hpp_source.html  LihowarException_8hpp_source.html  LihowarIOException_8hpp_source.html  Material_8hpp_source.html  Mesh_8hpp_source.html  MultiLightsProgram_8hpp_source.html  NormalProgram_8hpp_source.html  ObjectDynamic_8hpp_source.html  Object_8hpp_source.html  Observer_8hpp_source.html  Pentaball_8hpp_source.html  Plateform_8hpp_source.html  Player_8hpp_source.html  Program_8hpp_source.html  SceneSerializer_8hpp_source.html  Scene_8hpp_source.html  Serializer_8hpp_source.html  SkyboxProgram_8hpp_source.html  Skybox_8hpp_source.html  Subject_8hpp_source.html  Texture_8hpp_source.html  TrackballCamera_8hpp_source.html  annotated.html  classes.html  classlihowar_1_1AssetManager-members.html  classlihowar_1_1AssetManager.html  (+253 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  (+45 more)
glimac/: CMakeLists.txt
glimac/include/glimac/: FreeflyCamera.hpp  SDLWindowManager.hpp  TrackballCamera.hpp
glimac/src/: FreeflyCamera.cpp  Geometry.cpp  SDLWindowManager.cpp  TrackballCamera.cpp
lihowarlib/: CMakeLists.txt
lihowarlib/doc/: CMakeLists.txt  Doxyfile.in  DoxyfileWithoutCmake.in  mainpage.md
lihowarlib/include/lihowarlib/: AssetManager.hpp  Controller.hpp  Game.hpp  GameConfig.hpp  GameController.hpp  GameObject.hpp  GameObjectTextured.hpp  GameRenderer.hpp  Light.hpp  LightDirectional.hpp  LightPoint.hpp  LihowarException.hpp  Material.hpp  Mesh.hpp  Model.hpp  Object.hpp  ObjectDynamic.hpp  Player.hpp  Scene.hpp  Settings.hpp  Skybox.hpp  Texture.hpp  TrackballCamera.hpp  _.hpp  common.hpp
lihowarlib/include/lihowarlib/designpattern/: IObserver.hpp  ISubject.hpp  Observer.hpp  Subject.hpp
lihowarlib/include/lihowarlib/exceptions/: LihowarException.hpp  LihowarIOException.hpp
lihowarlib/include/lihowarlib/io/: ConfigManager.hpp  ConfigSerializer.hpp  SceneSerializer.hpp  Serializer.hpp
lihowarlib/include/lihowarlib/objects/: Beacon.hpp  Island.hpp  Pentaball.hpp  Plateform.hpp  Player.hpp  Skybox.hpp
lihowarlib/include/lihowarlib/programs/: DirLightProgram.hpp  DirLightTexProgram.hpp  IslandProgram.hpp  MultiLightsProgram.hpp  Normal.hpp  NormalProgram.hpp  Program.hpp  SkyboxProgram.hpp
lihowarlib/src/: AssetManager.cpp  Controller.cpp  Game.cpp  GameConfig.cpp  GameController.cpp  GameObject.cpp  GameObjectTextured.cpp  GameRenderer.cpp  Mesh.cpp  Model.cpp  Object.cpp  ObjectDynamic.cpp  Player.cpp  Settings.cpp  Texture.cpp  TrackballCamera.cpp  _.cpp
lihowarlib/src/io/: ConfigManager.cpp  SceneSerializer.cpp
lihowarlib/src/objects/: Player.cpp
scenes/: scene1.json
src/: CMakeLists.txt  main.cpp
src/shaders/: 3D.vs.glsl  dirlight.fs.glsl  dirlighttex.fs.glsl  island.fs.glsl  island.vs.glsl  multiTex3D.fs.glsl  multilights.fs.glsl  normals.fs.glsl  skybox.fs.glsl  skybox.vs.glsl
tools/: CMakeLists.txt  normalShifter.cpp
